cluster/apps/default/echoip/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: echoip
  name: echoip
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echoip
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: echoip
    spec:
      containers:
        - args:
            - -H
            - X-Real-IP
            - -a
            - /geoip/GeoLite2-ASN.mmdb
            - -c
            - /geoip/GeoLite2-City.mmdb
            - -f
            - /geoip/GeoLite2-Country.mmdb
          image: mpolden/echoip
          imagePullPolicy: Always
          name: echoip
          ports:
            - containerPort: 8080
              protocol: TCP
          # Sized from 30 days of observed usage.
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              memory: 96Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - name: geoip
              mountPath: /geoip
              readOnly: true
      volumes:
        - name: geoip
          emptyDir: {}
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
