cluster/apps/default/echoip/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: echoip
  namespace: default
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: echoip
---
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: default
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: echoip
